parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> TkCreate bot_list TkExecute statement_list TkEnd
Rule 2     programa -> TkExecute statement_list TkEnd
Rule 3     bot_list -> bot_list bot_def
Rule 4     bot_list -> bot_def
Rule 5     bot_def -> tipo TkBot var_id_list on_list TkEnd
Rule 6     bot_def -> tipo TkBot var_id_list TkEnd
Rule 7     tipo -> TkInt
Rule 8     tipo -> TkBool
Rule 9     tipo -> TkChar
Rule 10    var_id_list -> var_id_list TkComa TkIdent
Rule 11    var_id_list -> TkIdent
Rule 12    on_list -> on_list statement_on
Rule 13    on_list -> statement_on
Rule 14    expression -> expression TkSuma expression
Rule 15    expression -> expression TkResta expression
Rule 16    expression -> expression TkMult expression
Rule 17    expression -> expression TkDiv expression
Rule 18    expression -> expression TkMod expression
Rule 19    expression -> expression TkMenor expression
Rule 20    expression -> expression TkMenorIgual expression
Rule 21    expression -> expression TkMayor expression
Rule 22    expression -> expression TkMayorIgual expression
Rule 23    expression -> expression TkIgual expression
Rule 24    expression -> expression TkDesigualdad expression
Rule 25    expression -> expression TkConjuncion expression
Rule 26    expression -> expression TkDisyuncion expression
Rule 27    expression -> TkNegacion expression
Rule 28    expression -> TkResta expression
Rule 29    expression -> TkParAbre expression TkParCierra
Rule 30    statement -> TkIf expression TkDosPuntos statement_list TkEnd
Rule 31    statement -> TkIf expression TkDosPuntos statement_list TkElse statement_list TkEnd
Rule 32    statement -> TkWhile expression TkDosPuntos statement_list TkEnd
Rule 33    statement_on -> TkOn TkActivation TkDosPuntos statement_list TkEnd
Rule 34    statement_on -> TkOn TkDeactivation TkDosPuntos statement_list TkEnd
Rule 35    statement_on -> TkOn TkDeactivate TkDosPuntos statement_list TkEnd
Rule 36    statement_on -> TkOn expression TkDosPuntos statement_list TkEnd
Rule 37    statement_on -> TkOn TkDefault TkDosPuntos statement_list TkEnd
Rule 38    statement_list -> statement_list statement
Rule 39    statement_list -> statement
Rule 40    statement -> TkActivate var_list TkPunto
Rule 41    statement -> TkDeactivate var_list TkPunto
Rule 42    statement -> TkAdvance var_list TkPunto
Rule 43    statement -> TkSend TkPunto
Rule 44    statement -> TkRead TkPunto
Rule 45    statement -> TkRead TkAs TkIdent TkPunto
Rule 46    statement -> TkCollect TkPunto
Rule 47    statement -> TkCollect TkAs TkIdent TkPunto
Rule 48    statement -> TkDrop expression TkPunto
Rule 49    statement -> TkLeft TkPunto
Rule 50    statement -> TkRight TkPunto
Rule 51    statement -> TkUp TkPunto
Rule 52    statement -> TkDown TkPunto
Rule 53    statement -> TkLeft expression TkPunto
Rule 54    statement -> TkRight expression TkPunto
Rule 55    statement -> TkUp expression TkPunto
Rule 56    statement -> TkDown expression TkPunto
Rule 57    statement -> TkStore expression TkPunto
Rule 58    var_list -> var_list TkComa expression
Rule 59    var_list -> expression
Rule 60    expression -> TkIdent
Rule 61    expression -> TkNum
Rule 62    expression -> TkCaracter
Rule 63    expression -> TkTrue
Rule 64    expression -> TkFalse

Terminals, with rules where they appear

TkActivate           : 40
TkActivation         : 33
TkAdvance            : 42
TkAs                 : 45 47
TkBool               : 8
TkBot                : 5 6
TkCaracter           : 62
TkChar               : 9
TkCollect            : 46 47
TkComa               : 10 58
TkConjuncion         : 25
TkCreate             : 1
TkDeactivate         : 35 41
TkDeactivation       : 34
TkDefault            : 37
TkDesigualdad        : 24
TkDisyuncion         : 26
TkDiv                : 17
TkDosPuntos          : 30 31 32 33 34 35 36 37
TkDown               : 52 56
TkDrop               : 48
TkElse               : 31
TkEnd                : 1 2 5 6 30 31 32 33 34 35 36 37
TkExecute            : 1 2
TkFalse              : 64
TkIdent              : 10 11 45 47 60
TkIf                 : 30 31
TkIgual              : 23
TkInt                : 7
TkLeft               : 49 53
TkMayor              : 21
TkMayorIgual         : 22
TkMenor              : 19
TkMenorIgual         : 20
TkMod                : 18
TkMult               : 16
TkNegacion           : 27
TkNum                : 61
TkOn                 : 33 34 35 36 37
TkParAbre            : 29
TkParCierra          : 29
TkPunto              : 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
TkRead               : 44 45
TkResta              : 15 28
TkRight              : 50 54
TkSend               : 43
TkStore              : 57
TkSuma               : 14
TkTrue               : 63
TkUp                 : 51 55
TkWhile              : 32
error                : 

Nonterminals, with rules where they appear

bot_def              : 3 4
bot_list             : 1 3
expression           : 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 28 29 30 31 32 36 48 53 54 55 56 57 58 59
on_list              : 5 12
programa             : 0
statement            : 38 39
statement_list       : 1 2 30 31 31 32 33 34 35 36 37 38
statement_on         : 12 13
tipo                 : 5 6
var_id_list          : 5 6 10
var_list             : 40 41 42 58

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . TkCreate bot_list TkExecute statement_list TkEnd
    (2) programa -> . TkExecute statement_list TkEnd

    TkCreate        shift and go to state 2
    TkExecute       shift and go to state 3

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> TkCreate . bot_list TkExecute statement_list TkEnd
    (3) bot_list -> . bot_list bot_def
    (4) bot_list -> . bot_def
    (5) bot_def -> . tipo TkBot var_id_list on_list TkEnd
    (6) bot_def -> . tipo TkBot var_id_list TkEnd
    (7) tipo -> . TkInt
    (8) tipo -> . TkBool
    (9) tipo -> . TkChar

    TkInt           shift and go to state 7
    TkBool          shift and go to state 8
    TkChar          shift and go to state 9

    bot_list                       shift and go to state 4
    bot_def                        shift and go to state 5
    tipo                           shift and go to state 6

state 3

    (2) programa -> TkExecute . statement_list TkEnd
    (38) statement_list -> . statement_list statement
    (39) statement_list -> . statement
    (30) statement -> . TkIf expression TkDosPuntos statement_list TkEnd
    (31) statement -> . TkIf expression TkDosPuntos statement_list TkElse statement_list TkEnd
    (32) statement -> . TkWhile expression TkDosPuntos statement_list TkEnd
    (40) statement -> . TkActivate var_list TkPunto
    (41) statement -> . TkDeactivate var_list TkPunto
    (42) statement -> . TkAdvance var_list TkPunto
    (43) statement -> . TkSend TkPunto
    (44) statement -> . TkRead TkPunto
    (45) statement -> . TkRead TkAs TkIdent TkPunto
    (46) statement -> . TkCollect TkPunto
    (47) statement -> . TkCollect TkAs TkIdent TkPunto
    (48) statement -> . TkDrop expression TkPunto
    (49) statement -> . TkLeft TkPunto
    (50) statement -> . TkRight TkPunto
    (51) statement -> . TkUp TkPunto
    (52) statement -> . TkDown TkPunto
    (53) statement -> . TkLeft expression TkPunto
    (54) statement -> . TkRight expression TkPunto
    (55) statement -> . TkUp expression TkPunto
    (56) statement -> . TkDown expression TkPunto
    (57) statement -> . TkStore expression TkPunto

    TkIf            shift and go to state 12
    TkWhile         shift and go to state 13
    TkActivate      shift and go to state 14
    TkDeactivate    shift and go to state 15
    TkAdvance       shift and go to state 16
    TkSend          shift and go to state 17
    TkRead          shift and go to state 18
    TkCollect       shift and go to state 19
    TkDrop          shift and go to state 20
    TkLeft          shift and go to state 21
    TkRight         shift and go to state 22
    TkUp            shift and go to state 23
    TkDown          shift and go to state 24
    TkStore         shift and go to state 25

    statement_list                 shift and go to state 10
    statement                      shift and go to state 11

state 4

    (1) programa -> TkCreate bot_list . TkExecute statement_list TkEnd
    (3) bot_list -> bot_list . bot_def
    (5) bot_def -> . tipo TkBot var_id_list on_list TkEnd
    (6) bot_def -> . tipo TkBot var_id_list TkEnd
    (7) tipo -> . TkInt
    (8) tipo -> . TkBool
    (9) tipo -> . TkChar

    TkExecute       shift and go to state 26
    TkInt           shift and go to state 7
    TkBool          shift and go to state 8
    TkChar          shift and go to state 9

    bot_def                        shift and go to state 27
    tipo                           shift and go to state 6

state 5

    (4) bot_list -> bot_def .

    TkExecute       reduce using rule 4 (bot_list -> bot_def .)
    TkInt           reduce using rule 4 (bot_list -> bot_def .)
    TkBool          reduce using rule 4 (bot_list -> bot_def .)
    TkChar          reduce using rule 4 (bot_list -> bot_def .)


state 6

    (5) bot_def -> tipo . TkBot var_id_list on_list TkEnd
    (6) bot_def -> tipo . TkBot var_id_list TkEnd

    TkBot           shift and go to state 28


state 7

    (7) tipo -> TkInt .

    TkBot           reduce using rule 7 (tipo -> TkInt .)


state 8

    (8) tipo -> TkBool .

    TkBot           reduce using rule 8 (tipo -> TkBool .)


state 9

    (9) tipo -> TkChar .

    TkBot           reduce using rule 9 (tipo -> TkChar .)


state 10

    (2) programa -> TkExecute statement_list . TkEnd
    (38) statement_list -> statement_list . statement
    (30) statement -> . TkIf expression TkDosPuntos statement_list TkEnd
    (31) statement -> . TkIf expression TkDosPuntos statement_list TkElse statement_list TkEnd
    (32) statement -> . TkWhile expression TkDosPuntos statement_list TkEnd
    (40) statement -> . TkActivate var_list TkPunto
    (41) statement -> . TkDeactivate var_list TkPunto
    (42) statement -> . TkAdvance var_list TkPunto
    (43) statement -> . TkSend TkPunto
    (44) statement -> . TkRead TkPunto
    (45) statement -> . TkRead TkAs TkIdent TkPunto
    (46) statement -> . TkCollect TkPunto
    (47) statement -> . TkCollect TkAs TkIdent TkPunto
    (48) statement -> . TkDrop expression TkPunto
    (49) statement -> . TkLeft TkPunto
    (50) statement -> . TkRight TkPunto
    (51) statement -> . TkUp TkPunto
    (52) statement -> . TkDown TkPunto
    (53) statement -> . TkLeft expression TkPunto
    (54) statement -> . TkRight expression TkPunto
    (55) statement -> . TkUp expression TkPunto
    (56) statement -> . TkDown expression TkPunto
    (57) statement -> . TkStore expression TkPunto

    TkEnd           shift and go to state 29
    TkIf            shift and go to state 12
    TkWhile         shift and go to state 13
    TkActivate      shift and go to state 14
    TkDeactivate    shift and go to state 15
    TkAdvance       shift and go to state 16
    TkSend          shift and go to state 17
    TkRead          shift and go to state 18
    TkCollect       shift and go to state 19
    TkDrop          shift and go to state 20
    TkLeft          shift and go to state 21
    TkRight         shift and go to state 22
    TkUp            shift and go to state 23
    TkDown          shift and go to state 24
    TkStore         shift and go to state 25

    statement                      shift and go to state 30

state 11

    (39) statement_list -> statement .

    TkEnd           reduce using rule 39 (statement_list -> statement .)
    TkIf            reduce using rule 39 (statement_list -> statement .)
    TkWhile         reduce using rule 39 (statement_list -> statement .)
    TkActivate      reduce using rule 39 (statement_list -> statement .)
    TkDeactivate    reduce using rule 39 (statement_list -> statement .)
    TkAdvance       reduce using rule 39 (statement_list -> statement .)
    TkSend          reduce using rule 39 (statement_list -> statement .)
    TkRead          reduce using rule 39 (statement_list -> statement .)
    TkCollect       reduce using rule 39 (statement_list -> statement .)
    TkDrop          reduce using rule 39 (statement_list -> statement .)
    TkLeft          reduce using rule 39 (statement_list -> statement .)
    TkRight         reduce using rule 39 (statement_list -> statement .)
    TkUp            reduce using rule 39 (statement_list -> statement .)
    TkDown          reduce using rule 39 (statement_list -> statement .)
    TkStore         reduce using rule 39 (statement_list -> statement .)
    TkElse          reduce using rule 39 (statement_list -> statement .)


state 12

    (30) statement -> TkIf . expression TkDosPuntos statement_list TkEnd
    (31) statement -> TkIf . expression TkDosPuntos statement_list TkElse statement_list TkEnd
    (14) expression -> . expression TkSuma expression
    (15) expression -> . expression TkResta expression
    (16) expression -> . expression TkMult expression
    (17) expression -> . expression TkDiv expression
    (18) expression -> . expression TkMod expression
    (19) expression -> . expression TkMenor expression
    (20) expression -> . expression TkMenorIgual expression
    (21) expression -> . expression TkMayor expression
    (22) expression -> . expression TkMayorIgual expression
    (23) expression -> . expression TkIgual expression
    (24) expression -> . expression TkDesigualdad expression
    (25) expression -> . expression TkConjuncion expression
    (26) expression -> . expression TkDisyuncion expression
    (27) expression -> . TkNegacion expression
    (28) expression -> . TkResta expression
    (29) expression -> . TkParAbre expression TkParCierra
    (60) expression -> . TkIdent
    (61) expression -> . TkNum
    (62) expression -> . TkCaracter
    (63) expression -> . TkTrue
    (64) expression -> . TkFalse

    TkNegacion      shift and go to state 33
    TkResta         shift and go to state 32
    TkParAbre       shift and go to state 34
    TkIdent         shift and go to state 35
    TkNum           shift and go to state 36
    TkCaracter      shift and go to state 37
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    expression                     shift and go to state 31

state 13

    (32) statement -> TkWhile . expression TkDosPuntos statement_list TkEnd
    (14) expression -> . expression TkSuma expression
    (15) expression -> . expression TkResta expression
    (16) expression -> . expression TkMult expression
    (17) expression -> . expression TkDiv expression
    (18) expression -> . expression TkMod expression
    (19) expression -> . expression TkMenor expression
    (20) expression -> . expression TkMenorIgual expression
    (21) expression -> . expression TkMayor expression
    (22) expression -> . expression TkMayorIgual expression
    (23) expression -> . expression TkIgual expression
    (24) expression -> . expression TkDesigualdad expression
    (25) expression -> . expression TkConjuncion expression
    (26) expression -> . expression TkDisyuncion expression
    (27) expression -> . TkNegacion expression
    (28) expression -> . TkResta expression
    (29) expression -> . TkParAbre expression TkParCierra
    (60) expression -> . TkIdent
    (61) expression -> . TkNum
    (62) expression -> . TkCaracter
    (63) expression -> . TkTrue
    (64) expression -> . TkFalse

    TkNegacion      shift and go to state 33
    TkResta         shift and go to state 32
    TkParAbre       shift and go to state 34
    TkIdent         shift and go to state 35
    TkNum           shift and go to state 36
    TkCaracter      shift and go to state 37
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    expression                     shift and go to state 40

state 14

    (40) statement -> TkActivate . var_list TkPunto
    (58) var_list -> . var_list TkComa expression
    (59) var_list -> . expression
    (14) expression -> . expression TkSuma expression
    (15) expression -> . expression TkResta expression
    (16) expression -> . expression TkMult expression
    (17) expression -> . expression TkDiv expression
    (18) expression -> . expression TkMod expression
    (19) expression -> . expression TkMenor expression
    (20) expression -> . expression TkMenorIgual expression
    (21) expression -> . expression TkMayor expression
    (22) expression -> . expression TkMayorIgual expression
    (23) expression -> . expression TkIgual expression
    (24) expression -> . expression TkDesigualdad expression
    (25) expression -> . expression TkConjuncion expression
    (26) expression -> . expression TkDisyuncion expression
    (27) expression -> . TkNegacion expression
    (28) expression -> . TkResta expression
    (29) expression -> . TkParAbre expression TkParCierra
    (60) expression -> . TkIdent
    (61) expression -> . TkNum
    (62) expression -> . TkCaracter
    (63) expression -> . TkTrue
    (64) expression -> . TkFalse

    TkNegacion      shift and go to state 33
    TkResta         shift and go to state 32
    TkParAbre       shift and go to state 34
    TkIdent         shift and go to state 35
    TkNum           shift and go to state 36
    TkCaracter      shift and go to state 37
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    var_list                       shift and go to state 41
    expression                     shift and go to state 42

state 15

    (41) statement -> TkDeactivate . var_list TkPunto
    (58) var_list -> . var_list TkComa expression
    (59) var_list -> . expression
    (14) expression -> . expression TkSuma expression
    (15) expression -> . expression TkResta expression
    (16) expression -> . expression TkMult expression
    (17) expression -> . expression TkDiv expression
    (18) expression -> . expression TkMod expression
    (19) expression -> . expression TkMenor expression
    (20) expression -> . expression TkMenorIgual expression
    (21) expression -> . expression TkMayor expression
    (22) expression -> . expression TkMayorIgual expression
    (23) expression -> . expression TkIgual expression
    (24) expression -> . expression TkDesigualdad expression
    (25) expression -> . expression TkConjuncion expression
    (26) expression -> . expression TkDisyuncion expression
    (27) expression -> . TkNegacion expression
    (28) expression -> . TkResta expression
    (29) expression -> . TkParAbre expression TkParCierra
    (60) expression -> . TkIdent
    (61) expression -> . TkNum
    (62) expression -> . TkCaracter
    (63) expression -> . TkTrue
    (64) expression -> . TkFalse

    TkNegacion      shift and go to state 33
    TkResta         shift and go to state 32
    TkParAbre       shift and go to state 34
    TkIdent         shift and go to state 35
    TkNum           shift and go to state 36
    TkCaracter      shift and go to state 37
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    var_list                       shift and go to state 43
    expression                     shift and go to state 42

state 16

    (42) statement -> TkAdvance . var_list TkPunto
    (58) var_list -> . var_list TkComa expression
    (59) var_list -> . expression
    (14) expression -> . expression TkSuma expression
    (15) expression -> . expression TkResta expression
    (16) expression -> . expression TkMult expression
    (17) expression -> . expression TkDiv expression
    (18) expression -> . expression TkMod expression
    (19) expression -> . expression TkMenor expression
    (20) expression -> . expression TkMenorIgual expression
    (21) expression -> . expression TkMayor expression
    (22) expression -> . expression TkMayorIgual expression
    (23) expression -> . expression TkIgual expression
    (24) expression -> . expression TkDesigualdad expression
    (25) expression -> . expression TkConjuncion expression
    (26) expression -> . expression TkDisyuncion expression
    (27) expression -> . TkNegacion expression
    (28) expression -> . TkResta expression
    (29) expression -> . TkParAbre expression TkParCierra
    (60) expression -> . TkIdent
    (61) expression -> . TkNum
    (62) expression -> . TkCaracter
    (63) expression -> . TkTrue
    (64) expression -> . TkFalse

    TkNegacion      shift and go to state 33
    TkResta         shift and go to state 32
    TkParAbre       shift and go to state 34
    TkIdent         shift and go to state 35
    TkNum           shift and go to state 36
    TkCaracter      shift and go to state 37
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    var_list                       shift and go to state 44
    expression                     shift and go to state 42

state 17

    (43) statement -> TkSend . TkPunto

    TkPunto         shift and go to state 45


state 18

    (44) statement -> TkRead . TkPunto
    (45) statement -> TkRead . TkAs TkIdent TkPunto

    TkPunto         shift and go to state 46
    TkAs            shift and go to state 47


state 19

    (46) statement -> TkCollect . TkPunto
    (47) statement -> TkCollect . TkAs TkIdent TkPunto

    TkPunto         shift and go to state 48
    TkAs            shift and go to state 49


state 20

    (48) statement -> TkDrop . expression TkPunto
    (14) expression -> . expression TkSuma expression
    (15) expression -> . expression TkResta expression
    (16) expression -> . expression TkMult expression
    (17) expression -> . expression TkDiv expression
    (18) expression -> . expression TkMod expression
    (19) expression -> . expression TkMenor expression
    (20) expression -> . expression TkMenorIgual expression
    (21) expression -> . expression TkMayor expression
    (22) expression -> . expression TkMayorIgual expression
    (23) expression -> . expression TkIgual expression
    (24) expression -> . expression TkDesigualdad expression
    (25) expression -> . expression TkConjuncion expression
    (26) expression -> . expression TkDisyuncion expression
    (27) expression -> . TkNegacion expression
    (28) expression -> . TkResta expression
    (29) expression -> . TkParAbre expression TkParCierra
    (60) expression -> . TkIdent
    (61) expression -> . TkNum
    (62) expression -> . TkCaracter
    (63) expression -> . TkTrue
    (64) expression -> . TkFalse

    TkNegacion      shift and go to state 33
    TkResta         shift and go to state 32
    TkParAbre       shift and go to state 34
    TkIdent         shift and go to state 35
    TkNum           shift and go to state 36
    TkCaracter      shift and go to state 37
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    expression                     shift and go to state 50

state 21

    (49) statement -> TkLeft . TkPunto
    (53) statement -> TkLeft . expression TkPunto
    (14) expression -> . expression TkSuma expression
    (15) expression -> . expression TkResta expression
    (16) expression -> . expression TkMult expression
    (17) expression -> . expression TkDiv expression
    (18) expression -> . expression TkMod expression
    (19) expression -> . expression TkMenor expression
    (20) expression -> . expression TkMenorIgual expression
    (21) expression -> . expression TkMayor expression
    (22) expression -> . expression TkMayorIgual expression
    (23) expression -> . expression TkIgual expression
    (24) expression -> . expression TkDesigualdad expression
    (25) expression -> . expression TkConjuncion expression
    (26) expression -> . expression TkDisyuncion expression
    (27) expression -> . TkNegacion expression
    (28) expression -> . TkResta expression
    (29) expression -> . TkParAbre expression TkParCierra
    (60) expression -> . TkIdent
    (61) expression -> . TkNum
    (62) expression -> . TkCaracter
    (63) expression -> . TkTrue
    (64) expression -> . TkFalse

    TkPunto         shift and go to state 51
    TkNegacion      shift and go to state 33
    TkResta         shift and go to state 32
    TkParAbre       shift and go to state 34
    TkIdent         shift and go to state 35
    TkNum           shift and go to state 36
    TkCaracter      shift and go to state 37
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    expression                     shift and go to state 52

state 22

    (50) statement -> TkRight . TkPunto
    (54) statement -> TkRight . expression TkPunto
    (14) expression -> . expression TkSuma expression
    (15) expression -> . expression TkResta expression
    (16) expression -> . expression TkMult expression
    (17) expression -> . expression TkDiv expression
    (18) expression -> . expression TkMod expression
    (19) expression -> . expression TkMenor expression
    (20) expression -> . expression TkMenorIgual expression
    (21) expression -> . expression TkMayor expression
    (22) expression -> . expression TkMayorIgual expression
    (23) expression -> . expression TkIgual expression
    (24) expression -> . expression TkDesigualdad expression
    (25) expression -> . expression TkConjuncion expression
    (26) expression -> . expression TkDisyuncion expression
    (27) expression -> . TkNegacion expression
    (28) expression -> . TkResta expression
    (29) expression -> . TkParAbre expression TkParCierra
    (60) expression -> . TkIdent
    (61) expression -> . TkNum
    (62) expression -> . TkCaracter
    (63) expression -> . TkTrue
    (64) expression -> . TkFalse

    TkPunto         shift and go to state 53
    TkNegacion      shift and go to state 33
    TkResta         shift and go to state 32
    TkParAbre       shift and go to state 34
    TkIdent         shift and go to state 35
    TkNum           shift and go to state 36
    TkCaracter      shift and go to state 37
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    expression                     shift and go to state 54

state 23

    (51) statement -> TkUp . TkPunto
    (55) statement -> TkUp . expression TkPunto
    (14) expression -> . expression TkSuma expression
    (15) expression -> . expression TkResta expression
    (16) expression -> . expression TkMult expression
    (17) expression -> . expression TkDiv expression
    (18) expression -> . expression TkMod expression
    (19) expression -> . expression TkMenor expression
    (20) expression -> . expression TkMenorIgual expression
    (21) expression -> . expression TkMayor expression
    (22) expression -> . expression TkMayorIgual expression
    (23) expression -> . expression TkIgual expression
    (24) expression -> . expression TkDesigualdad expression
    (25) expression -> . expression TkConjuncion expression
    (26) expression -> . expression TkDisyuncion expression
    (27) expression -> . TkNegacion expression
    (28) expression -> . TkResta expression
    (29) expression -> . TkParAbre expression TkParCierra
    (60) expression -> . TkIdent
    (61) expression -> . TkNum
    (62) expression -> . TkCaracter
    (63) expression -> . TkTrue
    (64) expression -> . TkFalse

    TkPunto         shift and go to state 55
    TkNegacion      shift and go to state 33
    TkResta         shift and go to state 32
    TkParAbre       shift and go to state 34
    TkIdent         shift and go to state 35
    TkNum           shift and go to state 36
    TkCaracter      shift and go to state 37
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    expression                     shift and go to state 56

state 24

    (52) statement -> TkDown . TkPunto
    (56) statement -> TkDown . expression TkPunto
    (14) expression -> . expression TkSuma expression
    (15) expression -> . expression TkResta expression
    (16) expression -> . expression TkMult expression
    (17) expression -> . expression TkDiv expression
    (18) expression -> . expression TkMod expression
    (19) expression -> . expression TkMenor expression
    (20) expression -> . expression TkMenorIgual expression
    (21) expression -> . expression TkMayor expression
    (22) expression -> . expression TkMayorIgual expression
    (23) expression -> . expression TkIgual expression
    (24) expression -> . expression TkDesigualdad expression
    (25) expression -> . expression TkConjuncion expression
    (26) expression -> . expression TkDisyuncion expression
    (27) expression -> . TkNegacion expression
    (28) expression -> . TkResta expression
    (29) expression -> . TkParAbre expression TkParCierra
    (60) expression -> . TkIdent
    (61) expression -> . TkNum
    (62) expression -> . TkCaracter
    (63) expression -> . TkTrue
    (64) expression -> . TkFalse

    TkPunto         shift and go to state 57
    TkNegacion      shift and go to state 33
    TkResta         shift and go to state 32
    TkParAbre       shift and go to state 34
    TkIdent         shift and go to state 35
    TkNum           shift and go to state 36
    TkCaracter      shift and go to state 37
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    expression                     shift and go to state 58

state 25

    (57) statement -> TkStore . expression TkPunto
    (14) expression -> . expression TkSuma expression
    (15) expression -> . expression TkResta expression
    (16) expression -> . expression TkMult expression
    (17) expression -> . expression TkDiv expression
    (18) expression -> . expression TkMod expression
    (19) expression -> . expression TkMenor expression
    (20) expression -> . expression TkMenorIgual expression
    (21) expression -> . expression TkMayor expression
    (22) expression -> . expression TkMayorIgual expression
    (23) expression -> . expression TkIgual expression
    (24) expression -> . expression TkDesigualdad expression
    (25) expression -> . expression TkConjuncion expression
    (26) expression -> . expression TkDisyuncion expression
    (27) expression -> . TkNegacion expression
    (28) expression -> . TkResta expression
    (29) expression -> . TkParAbre expression TkParCierra
    (60) expression -> . TkIdent
    (61) expression -> . TkNum
    (62) expression -> . TkCaracter
    (63) expression -> . TkTrue
    (64) expression -> . TkFalse

    TkNegacion      shift and go to state 33
    TkResta         shift and go to state 32
    TkParAbre       shift and go to state 34
    TkIdent         shift and go to state 35
    TkNum           shift and go to state 36
    TkCaracter      shift and go to state 37
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    expression                     shift and go to state 59

state 26

    (1) programa -> TkCreate bot_list TkExecute . statement_list TkEnd
    (38) statement_list -> . statement_list statement
    (39) statement_list -> . statement
    (30) statement -> . TkIf expression TkDosPuntos statement_list TkEnd
    (31) statement -> . TkIf expression TkDosPuntos statement_list TkElse statement_list TkEnd
    (32) statement -> . TkWhile expression TkDosPuntos statement_list TkEnd
    (40) statement -> . TkActivate var_list TkPunto
    (41) statement -> . TkDeactivate var_list TkPunto
    (42) statement -> . TkAdvance var_list TkPunto
    (43) statement -> . TkSend TkPunto
    (44) statement -> . TkRead TkPunto
    (45) statement -> . TkRead TkAs TkIdent TkPunto
    (46) statement -> . TkCollect TkPunto
    (47) statement -> . TkCollect TkAs TkIdent TkPunto
    (48) statement -> . TkDrop expression TkPunto
    (49) statement -> . TkLeft TkPunto
    (50) statement -> . TkRight TkPunto
    (51) statement -> . TkUp TkPunto
    (52) statement -> . TkDown TkPunto
    (53) statement -> . TkLeft expression TkPunto
    (54) statement -> . TkRight expression TkPunto
    (55) statement -> . TkUp expression TkPunto
    (56) statement -> . TkDown expression TkPunto
    (57) statement -> . TkStore expression TkPunto

    TkIf            shift and go to state 12
    TkWhile         shift and go to state 13
    TkActivate      shift and go to state 14
    TkDeactivate    shift and go to state 15
    TkAdvance       shift and go to state 16
    TkSend          shift and go to state 17
    TkRead          shift and go to state 18
    TkCollect       shift and go to state 19
    TkDrop          shift and go to state 20
    TkLeft          shift and go to state 21
    TkRight         shift and go to state 22
    TkUp            shift and go to state 23
    TkDown          shift and go to state 24
    TkStore         shift and go to state 25

    statement_list                 shift and go to state 60
    statement                      shift and go to state 11

state 27

    (3) bot_list -> bot_list bot_def .

    TkExecute       reduce using rule 3 (bot_list -> bot_list bot_def .)
    TkInt           reduce using rule 3 (bot_list -> bot_list bot_def .)
    TkBool          reduce using rule 3 (bot_list -> bot_list bot_def .)
    TkChar          reduce using rule 3 (bot_list -> bot_list bot_def .)


state 28

    (5) bot_def -> tipo TkBot . var_id_list on_list TkEnd
    (6) bot_def -> tipo TkBot . var_id_list TkEnd
    (10) var_id_list -> . var_id_list TkComa TkIdent
    (11) var_id_list -> . TkIdent

    TkIdent         shift and go to state 62

    var_id_list                    shift and go to state 61

state 29

    (2) programa -> TkExecute statement_list TkEnd .

    $end            reduce using rule 2 (programa -> TkExecute statement_list TkEnd .)


state 30

    (38) statement_list -> statement_list statement .

    TkEnd           reduce using rule 38 (statement_list -> statement_list statement .)
    TkIf            reduce using rule 38 (statement_list -> statement_list statement .)
    TkWhile         reduce using rule 38 (statement_list -> statement_list statement .)
    TkActivate      reduce using rule 38 (statement_list -> statement_list statement .)
    TkDeactivate    reduce using rule 38 (statement_list -> statement_list statement .)
    TkAdvance       reduce using rule 38 (statement_list -> statement_list statement .)
    TkSend          reduce using rule 38 (statement_list -> statement_list statement .)
    TkRead          reduce using rule 38 (statement_list -> statement_list statement .)
    TkCollect       reduce using rule 38 (statement_list -> statement_list statement .)
    TkDrop          reduce using rule 38 (statement_list -> statement_list statement .)
    TkLeft          reduce using rule 38 (statement_list -> statement_list statement .)
    TkRight         reduce using rule 38 (statement_list -> statement_list statement .)
    TkUp            reduce using rule 38 (statement_list -> statement_list statement .)
    TkDown          reduce using rule 38 (statement_list -> statement_list statement .)
    TkStore         reduce using rule 38 (statement_list -> statement_list statement .)
    TkElse          reduce using rule 38 (statement_list -> statement_list statement .)


state 31

    (30) statement -> TkIf expression . TkDosPuntos statement_list TkEnd
    (31) statement -> TkIf expression . TkDosPuntos statement_list TkElse statement_list TkEnd
    (14) expression -> expression . TkSuma expression
    (15) expression -> expression . TkResta expression
    (16) expression -> expression . TkMult expression
    (17) expression -> expression . TkDiv expression
    (18) expression -> expression . TkMod expression
    (19) expression -> expression . TkMenor expression
    (20) expression -> expression . TkMenorIgual expression
    (21) expression -> expression . TkMayor expression
    (22) expression -> expression . TkMayorIgual expression
    (23) expression -> expression . TkIgual expression
    (24) expression -> expression . TkDesigualdad expression
    (25) expression -> expression . TkConjuncion expression
    (26) expression -> expression . TkDisyuncion expression

    TkDosPuntos     shift and go to state 63
    TkSuma          shift and go to state 64
    TkResta         shift and go to state 65
    TkMult          shift and go to state 66
    TkDiv           shift and go to state 67
    TkMod           shift and go to state 68
    TkMenor         shift and go to state 69
    TkMenorIgual    shift and go to state 70
    TkMayor         shift and go to state 71
    TkMayorIgual    shift and go to state 72
    TkIgual         shift and go to state 73
    TkDesigualdad   shift and go to state 74
    TkConjuncion    shift and go to state 75
    TkDisyuncion    shift and go to state 76


state 32
